# EisenRadio

./: .coverage  .gitignore  .readthedocs.yml  Dockerfile  LICENSE.rst  MANIFEST.in  README.md  gh_action.txt  package-lock.json  package.json  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini  zDetHead.txt
.github/: README.rst
.github/workflows/: tests.yml
android/: main.py
docs/source/: README.rst  conf.py  eisenradio.eisenhome.rst  eisenradio.eisenutil.rst  eisenradio.lib.rst  eisenradio.rst  eisenradio.test.rst  features.rst  index.rst  indexStructure.rst  knownProblems.rst  overview.rst  sketch.rst
eisenradio/: __init__.py  app.py  cmd.py  config.py  db.py  gui.py  indexStructure.txt  overviewEisenRadio.txt  schema.sql  wsgi.py
eisenradio/api/: __init__.py
eisenradio/app_writeable/db/: database.db  eisenradio_android.db
eisenradio/eisenhome/: eishome.py  routes.py  watchdog.py
eisenradio/eisenhome/bp_home_static/css/: style.css
eisenradio/eisenhome/bp_home_static/js/: [index].test.js  analyzer.js  animate-canvas.js  animate.js  canvas.js  constants.js  degradeAnimation.js  ea_index.js  index.js  playlist.js  radioStyles.js  spaceStuff.js  svg-A1AirCraft-para-drop.js  svg-airPlanes.js  svg-balloons.js  svg-birds.js  svg-checkered-balloon.js  svg-cloudsIce.js  svg-default-stage-items.js  svg-doppel-decker.js  svg-floe-buoy.js  svg-foreBackGround.js  svg-front-man.js  svg-frontMan.js  svg-last-loaded-aniFrame.js  svg-main.js  svg-manage.js  svg-mng-utils.js  svg-moving-horizontal.js  svg-moving-stage-items.js  svg-parachuteDrop.js  svg-satellites.js  svg-screwHeads.js  svg-seaWaves.js  svg-speaker.js  svg-sprite.js  svg-teslaCoils.js  svg-toCanvas.js  svg-ufo.js  svg-util-animations.js  (+6 more)
eisenradio/eisenhome/bp_home_templates/: bp_home_base.html  bp_home_index.html  bp_home_page_flash.html  main.html
eisenradio/eisenradio.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
eisenradio/eisenutil/: aac_repair.py  analyser.py  browser_stream.py  config_html.py  eisutil.py  measure.py  monitor_records.py  request_info.py  routes.py  stopped_stations.py  tools.py
eisenradio/eisenutil/bp_util_static/css/: style.css
eisenradio/eisenutil/bp_util_static/js/: bp_util.js  confirmDialog.js
eisenradio/eisenutil/bp_util_templates/: bp_util_aac_repair.html  bp_util_about.html  bp_util_base.html  bp_util_create.html  bp_util_edit.html  bp_util_edit_all.html  bp_util_flash.html  bp_util_post.html  bp_util_radio_all_blacklist.html  bp_util_radio_blacklist.html  bp_util_save.html  bp_util_skip_blacklist.html  bp_util_tools.html
eisenradio/instance/: config.py  config_apfac.py
eisenradio/lib/: eisdb.py  ghetto_blacklist.py  ghetto_container.py  ghetto_http_srv.py  ghetto_ini.py  ghetto_menu.py  ghetto_meta.py  ghetto_net.py  ghetto_recorder.ascii  ghetto_recorder.py  platform_helper.py
eisenradio/static/css/: style.css
eisenradio/test/functional/: run_test.cmd  test_routes.py
eisenradio/test/jest/: [endPointGET].test.js  [endPointPOST].test.js  [unifyGenre].test.js  setup.txt
kivy/: buildozer.spec  main.py
snap/: snap_read.txt  snapcraft.yaml
snap/gui/: eisenradio.desktop
