[build-system]
requires = ["setuptools >= 42.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = 'eisenradio'
version = "2.4.0"
description = "Play radio. Style your App."
keywords = ['eisenradio', 'aac repair']
license = {file = "LICENSE.rst"}
readme = "README.md"
requires-python = ">=3.8"
dynamic = ['authors',]
classifiers = [
    "Framework :: Flask",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: OS Independent",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Android",
    "Development Status :: 5 - Production/Stable",
    "Topic :: Multimedia :: Sound/Audio :: Capture/Recording",

]
dependencies = [
'aacrepair',
'ghettorecorder==2.4.7',
'flask>=2.3.2',
'Werkzeug>=2.2.3',
'certifi',
'configparser>=5.0.2',
'pytest>=6.2.5',
'python-dotenv>=0.19.2',
'waitress',
]

[project.urls]
homepage = "https://github.com/44xtc44"
documentation = "https://eisenradio.readthedocs.io/"
repository = "https://github.com/44xtc44/EisenRadio"

[project.scripts]
eisenradio-cmd = "eisenradio.cmd:main"
eisenradio-wsgi = "eisenradio.wsgi:main"
eisenradio = "eisenradio.gui:main"

[tool.pytest.ini_options]
testpaths = "eisenradio"

[tool.mypy]
mypy_path = "eisenradio"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = tru
test = ["pytest>=6.0", "tox", "mypy", "sphinx", "sphinx_rtd_theme"]
lint = ["flake8"]
# cov = ["pytest < 5.0.0", "pytest-cov[all]"]