[metadata]
name = "eisenradio"
version = "2.0"
author = René Horn
author_email= rene_horn@gmx.net

[options]
zip_safe = True
include_package_data = True
test_suite = test
packages = find_namespace:

[options.packages.find]
# where = eisenradio

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.9.10
    flake8>=3.9
    tox>=3.24

[options.package_data]
eisenradio = py.typed

[flake8]
max-line-length = 120
