[metadata]
name = eisenradio
version = 2.4.1
author = René Horn
author_email= rene_horn@gmx.net

[options]
zip_safe = True
include_package_data = True
test_suite = test
packages = find_namespace:

[options.packages.find]
# where = eisenradio

[options.package_data]
eisenradio = py.typed

[flake8]
max-line-length = 120
